--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 						<span class="date">July 2023-Present</span>
 						<h2>Deputy Manager</h2>
 						<span class="position">TumbleDry</span>
-						<p class="mt-4">Invest4edu, Invest4Edu is a company that focuses on educational investments, aiming to revolutionize the way individuals invest in education. 
+						<p class="mt-4">Tumble Dry is a leading provider of laundry services, committed to delivering convenience and quality to our valued customers. As Deputy Manager, I oversee daily operations to ensure seamless service and uphold our reputation for excellence. Together with our dedicated team, we strive to exceed expectations and set the standard in the industry. 
 							<ul>
 								<li>Manage day to day business operations and ensured efficient and profitable actions for a Laundry & dry clean  franchise company.</li>
 								<li>Ensured company compliance with state and federal regulations to maintain licensure for continued operations.</li>
